# TML

./: .gitignore  CMakeLists.txt  README.md  run.sh
apps/: tml.cpp
include/tml/: parser.hpp  turing_machine.hpp
res/: sample.tml
src/tml/: parser.cpp  turing_machine.cpp
